--- a/sass/sections/_benefits.scss
+++ b/sass/sections/_benefits.scss
@@ -1,47 +1,123 @@
 .benefits {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
-  
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
   &__icon {
-  max-width: 270px;
-  height: 120px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
-  background: $team-background-color;
-  border-radius: 4px;
-}
+    max-width: 450px;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    background: $team-background-color;
+    border-radius: 4px;
 
-  &__uptitle {
-  display: none;
-}
+    @media screen and (min-width: 768px) {
+      max-width: 354px;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    @media screen and (min-width: 1200px) {
+      max-width: 270px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 
   &__list {
-  display: flex;
-}
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
 
   &__item {
-  max-width: 270px;
-  margin-right: 30px;
-}
+    width: 100%;
+      @media screen and (max-width: 767px) {
+         &:not(:last-child) {
+          margin-bottom: 30px;
+    }
+     }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+      margin-right: 30px;
+      margin-bottom: 30px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+      margin-bottom: 0;
+    }
+  }
+
+  &__item:nth-child(2n) {
+    margin-right: 0;
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
+  }
 
   &__item:last-child {
-  margin-right: 0;
-}
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;
+    }
+  }
+     &__item:nth-child(3) {
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;
+    }
+     }
+    @media screen and (min-width: 1200px) {
+      margin-right: 0;
+
+       &__item:nth-child(3) {
+       margin-right: 30px;
+    }
+
+    &__item:last-child {
+       margin-right: 0;
+    }
+  }
 
   &__title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  margin-bottom: 10px;
-}
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    margin-bottom: 10px;
+    text-align: center;
+
+    @media screen and (min-width: 768px) {
+      text-align: left;
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
+  }
 
   &__description {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: $link-color;
-}
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: $link-color;
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
+  }
 }
