--- a/sass/sections/_clients.scss
+++ b/sass/sections/_clients.scss
@@ -1,55 +1,119 @@
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   text-align: center;
 
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-  
-  &__list {
-  display: flex;
-  justify-content: center;
-}
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    text-align: center;
+  }
 
   &__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color:  $body-text-color;
-  margin-bottom: 50px;
-}
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: $body-text-color;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.16;
+      margin-bottom: 50px;
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
   &__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width:170px;
-  height:92px;
-  border: 1px solid #AFB1B8;
-  border-radius: 4px;
-  fill: #AFB1B8;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    fill: #afb1b8;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+  }
 
   &__item {
-  margin-right: 30px;
-}
+    width: calc((100% - 60px) / 2);
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
 
-  &__item:last-child {
-  margin-right: 0;
-}
+    &:nth-child(5) {
+      margin-bottom: 0;
+    }
+
+    &:nth-child(2n) {
+      margin-left: 30px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 60px) / 3);
+      margin-right: 30px;
+
+      &:nth-child(2n) {
+        margin-left: 0;
+      }
+
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+
+      &:nth-child(3) {
+        margin-bottom: 0;
+      }
+
+      &:nth-child(4) {
+        margin-bottom: 0;
+      }
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 150px) / 6);
+      margin-bottom: 0;
+      &:nth-child(3) {
+        margin-right: 30px;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &:nth-child(1) {
+        margin-bottom: 0;
+      }
+
+      &:nth-child(2) {
+        margin-bottom: 0;
+      }
+    }
+  }
 
   &__link:hover,
   &__link:focus {
-  border-color: $hover-color;
-  fill: $hover-color;
-}
+    border-color: $hover-color;
+    fill: $hover-color;
+  }
 
   &__icon {
-  width: 106px;
-  height: 60px;
- 
-}
+    width: 106px;
+    height: 60px;
+  }
 }
