--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -1,4 +1,3 @@
-
 footer {
   background-color: $background-color-footer;
   padding-top: 60px;
@@ -6,9 +5,24 @@ footer {
 }
 
 footer .container {
-  display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
+.footer-section {
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    text-align: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
+}
 
 .logo__footer {
   font-family: 'Raleway';
@@ -27,134 +41,250 @@ footer .container {
   margin-top: 20px;
 
   &__mailto {
-  margin-top: 9px;
-  margin-bottom: 9px;
-}
+    margin-top: 9px;
+    margin-bottom: 9px;
+
+    @media screen and (min-width: 768px) {
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
+  }
 
   &__mailto:last-child {
-  margin-bottom: 0;
-}
+    margin-bottom: 0;
+  }
 
   &__contact {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  font-style: normal;
-  color: $footer-contact;
-}
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    font-style: normal;
+    color: $footer-contact;
+  }
 
   &__address {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  font-style: normal;
-  color: $main-background-color;
-}
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    font-style: normal;
+    color: $main-background-color;
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
+  }
 }
 
 .socials {
-  margin-left: 70px;
+  text-align: center;
+  margin-top: 60px;
 
-  
+  @media screen and (min-width: 768px) {
+    text-align: center;
+    margin-left: 165px;
+    margin-top: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+    margin-left: 70px;
+  }
+
   &__title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: $main-background-color;
-  margin-bottom: 20px;
-}
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $main-background-color;
+    margin-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+    }
+  }
 
   &__list {
-  display: flex;
-}
+    display: flex;
+    align-items: center;
+
+    justify-content: center;
+  }
 
   &__item {
-  margin-right: 10px;
-}
+    margin-right: 10px;
+  }
 
   &__item:last-child {
-  margin-right: 0;
-}
+    margin-right: 0;
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
+  }
 
   &__link {
-  border-radius: 50%;
-  background-color:rgba(255, 255, 255, 0.1);
-  padding: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  fill:  $main-background-color;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: $main-background-color;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
+  }
 
   &__link:hover,
   &__link:focus {
-  background-color: $hover-color;
-  fill: $main-background-color;
+    background-color: $hover-color;
+    fill: $main-background-color;
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
+  }
 }
-} 
-
-
 
 .form {
-  margin-left: 93px;
+  text-align: center;
+  margin-top: 60px;
 
-  
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+    margin-left: 93px;
+    margin-top: 0;
+  }
+
   &__block {
-  display: flex;
-}
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
+  }
 
   &__title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color:  $main-background-color;
-  margin-bottom: 20px;
-}
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $main-background-color;
+    margin-bottom: 20px;
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: $main-background-color;
+      margin-bottom: 20px;
+    }
+  }
 
   &__input {
-  margin-right: 12px;
-  padding-left: 16px;
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: $background-color-footer;
-  color: $main-background-color;
+    margin-right: 12px;
+    padding-left: 16px;
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: $background-color-footer;
+    color: $main-background-color;
+
+     @media screen and (min-width: 768px) {
+      width: 450px;
+     }
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 12px;
+      padding-left: 16px;
+      width: 358px;
+      height: 50px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+      border-radius: 4px;
+      background-color: $background-color-footer;
+      color: $main-background-color;
+    }
   }
 
   &__input:hover,
   &__input:focus {
-  border-color: $hover-color;
-}
+    border-color: $hover-color;
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
+  }
 
   &__button {
-  width: 200px;
-  height: 50px;
-  background-color: $hover-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: $main-background-color;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 200px;
+    height: 50px;
+    background-color: $hover-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    color: $main-background-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20px;
+
+    @media screen and (min-width: 1200px) {
+      margin-top: 0;
+      width: 200px;
+      height: 50px;
+      background-color: $hover-color;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      border-radius: 4px;
+      border: none;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 1.87;
+      letter-spacing: 0.06em;
+      color: $main-background-color;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   &__send {
-  width: 24px;
-  height: 24px;
-  background-color: $hover-color;
-  fill: $main-background-color;
-  margin-left: 10px;
-}
+    width: 24px;
+    height: 24px;
+    background-color: $hover-color;
+    fill: $main-background-color;
+    margin-left: 10px;
+  }
 }
