--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -1,42 +1,85 @@
-
 .hero {
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  background-image:linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url("../images/hero-logo.jpg");
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url('../images/hero-logo.jpg');
+
+  .container {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../images/hero-logo.jpg');
+
+    .container {
+     
+      padding-right: 200px;
+      padding-left: 200px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: center;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url('../images/hero-logo.jpg');
+
+    .container {
+   
+      padding-top: 200px;
+      padding-bottom: 200px;
+    }
+  }
 
   &__title {
-  max-width: 696px;
-  margin:0 auto ;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  color: $main-background-color;
-}
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    color: $main-background-color;
 
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: 1.36;
+    }
+  }
 
   &__button {
-  font-family: 'Roboto';
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  border: none;
-  border-radius: 4px;
-  background-color: $hover-color;
-  color: $team-background-color;
-  padding: 10px 32px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-}
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    letter-spacing: 0.06em;
+    border: none;
+    border-radius: 4px;
+    background-color: $hover-color;
+    color: $team-background-color;
+    padding: 10px 24px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+
+    @media screen and (min-width: 1200px) {
+      padding: 10px 32px;
+    }
+  }
 
   &__button:hover,
   &__button:focus {
-  background-color: $hover-color;
-}
-
+    background-color: $hover-color;
+  }
 }
