--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -1,21 +1,49 @@
 .portfolio {
-  
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .services {
+  @media screen and (min-width: 76px) {
     display: flex;
+    flex-wrap: wrap;
+    row-gap: 15px;
+    margin-bottom: 30px;
+    column-gap: 8px;
+  }
+
+  @media screen and (min-width: 768px) {
     justify-content: center;
+    
+  }
+
+  @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
+  }
 
   &__item {
-    margin-right: 8px;
+
+    max-width: 450px;
+
+    @media screen and (min-width: 768px) {
+      max-width: 354px;
+   
+    }
+
+    @media screen and (min-width: 1200px) {
+      max-width: 370px;
+    }
   }
 
   &__item:last-child {
     margin-right: 0;
   }
+
 
   &__button {
     font-family: 'Roboto';
@@ -46,9 +74,27 @@
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  justify-content: center;
+
+   @media screen and (min-width: 768px) {
+    justify-content: space-between;
+   }
 
   &__item {
-    max-width: 370px;
+    width: 100%;
+    
+
+
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 30px) / 2);
+      max-width: 354px;
+      //  flex-shrink: 1;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 60px) / 3);
+      max-width: 370px;
+    }
   }
 
   &__item:hover,
@@ -64,6 +110,15 @@
   &__wrap {
     position: relative;
     overflow: hidden;
+  }
+
+  &__photo {
+    width: 100%;
+
+     @media screen and (min-width: 768px) {
+   width: 100%;
+   }
+
   }
 
   &__text {
@@ -89,6 +144,9 @@
     border-left: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
     border-bottom: 1px solid #eeeeee;
+    flex-grow: 1;
+
+   
   }
 
   &__title {
@@ -106,4 +164,10 @@
     margin-top: 4px;
     color: $link-color;
   }
+}
+
+.collage__link {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
