--- a/sass/sections/_work.scss
+++ b/sass/sections/_work.scss
@@ -1,49 +1,112 @@
 
 .work {
-  padding-bottom: 94px;
-
+ 
+  display: none;
+    
   
-  &__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 50px;
-}
-
-  &__list {
-  display: flex;
-}
-
-  &__text__posicion {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-  &__text {
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color:$main-background-color;
-}
-
-  &__item {
-  margin-right: 30px;
-  position: relative;
-}
-
-  &__item:last-child {
-  margin-right: 0;
-}
-}
+     @media screen and (min-width: 1200px) {
+     display: flex;
+     padding-bottom: 94px;
+     }
+  
+    
+    &__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  
+    
+    //  @media screen and (min-width: 768px) {
+      
+    //  }
+  
+    //  @media screen and (min-width: 1200px) {
+    
+    //  }
+  }
+  
+    &__list {
+    display: flex;
+  
+    
+    //  @media screen and (min-width: 768px) {
+      
+    //  }
+  
+    //  @media screen and (min-width: 1200px) {
+    
+    //  }
+  }
+  
+    &__text__posicion {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    
+    //  @media screen and (min-width: 768px) {
+      
+    //  }
+  
+    //  @media screen and (min-width: 1200px) {
+    
+    //  }
+  }
+  
+  
+    &__text {
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color:$main-background-color;
+  
+    
+    //  @media screen and (min-width: 768px) {
+      
+    //  }
+  
+    //  @media screen and (min-width: 1200px) {
+    
+    //  }
+  }
+  
+    &__item {
+    margin-right: 30px;
+    position: relative;
+  
+    
+     @media screen and (min-width: 768px) {
+      
+     }
+  
+     @media screen and (min-width: 1200px) {
+        margin-right: 30px;
+        position: relative;
+  
+     }
+  }
+  
+    &__item:last-child {
+    margin-right: 0;
+  
+    
+    //  @media screen and (min-width: 768px) {
+      
+    //  }
+  
+    //  @media screen and (min-width: 1200px) {
+    
+    //  }
+  }
+  }
