--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,9 +1,11 @@
+
 .container {
     max-width: 1200px;
     margin-right: auto;
     margin-left: auto;
     padding-right: 15px;
     padding-left: 15px;
+    outline: 1px solid red;
   
      @media screen and (min-width: 480px) {
       width: 480px;
